--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -24629,7 +24629,7 @@ layout
 }
 
 .npPage_introDefault .swiper__text {
-    padding-bottom: 40px;
+    padding-top: 20px;
 }
 
 .npPage_introDefault .swiper__text .swiper-wrapper {
@@ -30944,7 +30944,7 @@ body::-webkit-scrollbar {
 #wrapper,
 #content {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 button,
