--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -11,3 +11,16 @@
 .full-height {
     height: 100vh !important;
 }
+
+html, body {
+    /* position: static;*/
+    margin: 0;
+    height: 100%;
+    overflow: scroll;
+}
+
+
+/*#app_root {
+    height: 100%;
+    overflow: scroll;
+}*/
